# WaveDeck

./: .gitignore  CMakeLists.txt  README.md  example_wdeck.cc  wavedeck-doc.doxy.in
.github/workflows/: cmake_test.yml
cmake/: WaveDeckConfig.cmake.in
examples/: CMakeLists.txt  example_wdeck_noise_analysis.cc  example_wdeck_smoothing.cc  example_wdeck_waveproducer.C  example_wdeck_waveproducer.cc  example_wdeck_wiener.cc  noise_generic_model.txt  spe_generic_model.txt
src/include/: TWDeck.h  TWDeckLinkDef.h  TWDeckPATH.h  TWDeckPATH.h.in  TWDeckUtils.h  TWDeckWfm.h  TWDeckWfmFilter.h  TWDeckWfmLinkDef.h  TWDeckWfmModel.h  rootlogon.C.in
src/src/: CMakeLists.txt  TWDeck.cc  TWDeckWfm.cc  TWDeckWfmFilter.cc  TWDeckWfmModel.cc
tests/: CMakeLists.txt  TWDeckFilter_test.cc  TWDeckModel_test.cc  TWDeckUtils_test.cc  TWDeckWfm_test.cc  TWDeck_test.cc
